--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
-    "@ngxs/store": "^3.4.3",
+    "@ngxs/devtools-plugin": "^3.4.3-dev.master-f3f4dbd",
+    "@ngxs/logger-plugin": "^3.4.3-dev.master-f3f4dbd",
+    "@ngxs/store": "^3.4.3-dev.master-f3f4dbd",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
